Revision history for {{$dist->name}}

{{$NEXT}}

1.61_01   2022-06-23 16:16:43 -0500
  - Added experimental modules FFI::Build::Plugin and FFI::Build::PluginData (gh#351)

1.60_01   2022-06-23 15:49:42 -0500
  - Updated installer

1.59_01   2022-06-19 07:47:49 -0600
  - Internal refactor (gh#361)

1.58      2022-06-19 06:19:42 -0600
  - TypeParser version 2 accept string(10) as alias for string(10)* (gh#346, gh#359)

1.57      2022-06-15 18:30:29 -0600
  - Documentation improvements

1.56      2021-10-27 19:44:37 -0600
  - Fixes for very old versions of Mac OS X / Xcode (gh#350)
  - Added cxxld method to FFI::Build::Platform (gh#350)

1.55      2021-07-29 10:41:02 -0600
  - Production release identical to 1.54_01

1.54_01   2021-07-12 17:05:37 -0600
  - FFI::Temp will retry up to 10 times to avoid a race (gh#344, gh#348)

1.53      2021-07-12 12:18:27 -0600
  - Documentation improvements (gh#307, gh#347)

1.52      2021-07-01 07:33:44 -0600
  - Probe for intmax_t uintmax_t types (gh#341)

1.51      2021-07-01 07:25:38 -0600
  - Fix testing bug that was failing on systems with libffi that does
    not support variadic functions (ppisar++ gh#323, gh#343, gh#345)

1.50      2021-06-30 08:34:17 -0600
  - Production release identical to 1.49_01

1.49_01   2021-06-22 17:07:44 -0600
  - float gets promoted to double when used as a varadic argument
    (gh#323, gh#338)

1.48_01   2021-06-22 00:32:02 -0600
  - Test forks in CI (gh#333, #334, #335)
  - Internal refactor of pointer and array input arguments to reduce
    duplication (gh#336)

1.47_01   2021-06-21 22:24:40 -0600
  - Restore experimental code from 1.45_01

1.46      2021-06-21 22:20:12 -0600
  - Hotfix due to testing bug in 1.44 (gh#333)
  - This version does not include experimental code from 1.45_01.

1.45_01   2021-06-21 18:23:17 -0600
  - Experimental: with api => 2, you can now pass an array reference to
    a pointer argument, which is roughly equivalent to an array type with