@@ -20,7 +20,7 @@ foreach my $api (0, 1, 2)
       warn $message;
     };
 
-    my $ffi = FFI::Platypus->new( api => $api, lib => [@lib], experimental => ($api >= 2 ? $api : undef) );
+    my $ffi = FFI::Platypus->new( api => $api, lib => [@lib], experimental => ($api > 2 ? $api : undef) );
     $ffi->type('double *' => 'double_p');
     $ffi->type('double [10]' => 'double_a');
     $ffi->type('double []' => 'double_a2');
